k8s_base/overlays/aws/website/k_website.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  annotations:
    link.argocd.argoproj.io/external-link: https://www.nuts.frank5.link
