k8s_base/overlays/aws/website/k_http_gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
spec:
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - www.nuts.frank5.link
    - leasing.nuts.frank5.link
    - argocd2.nuts.frank5.link
    - kiali.nuts.frank5.link
    - prometheus.nuts.frank5.link
    - grafana.nuts.frank5.link
    - tracing.nuts.frank5.link
---
