k8s_base/overlays/aws/website/k_https_gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: https-gateway
spec:
  servers:
  - port:
      number: 443
      name: https-tls
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: website-tls
    hosts:
    - www.nuts.frank5.link
    - leasing.nuts.frank5.link
    - argocd.nuts.frank5.link
    - kiali.nuts.frank5.link
    - prometheus.nuts.frank5.link
    - grafana.nuts.frank5.link
    - tracing.nuts.frank5.link
  - port:
      number: 443
      name: https-passthrough
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - dashboard.nuts.frank5.link
---
