k8s_base/overlays/aws/website/k_argocd_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd2
spec:
  hosts:
  - argocd2.nuts.frank5.link
---
