k8s_base/overlays/aws/website/k_dashboard_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
spec:
  hosts:
  - dashboard.nuts.frank5.link
  tls:
  - match:
    - port: 443
      sniHosts:
      - dashboard.nuts.frank5.link
    route:
    - destination:
        host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
        port:
          number: 443
---
