k8s_base/overlays/aws/website/k_gitea_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitea
spec:
  hosts:
  - gitea.nuts.frank5.link
---
