k8s_base/overlays/aws/website/k_leasing_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leasing-web
spec:
  hosts:
  - leasing.nuts.frank5.link
---
