k8s_base/overlays/aws/website/k_website_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: website
spec:
  hosts:
  - "nuts.frank5.link"
---
